--- a/assets/css/sass/_footer.scss
+++ b/assets/css/sass/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  padding: 120px 0;
-  background-color: $black;
+  padding: 80px 0;
+  background-color: $sec;
   position: relative;
   z-index: 2;
 
@@ -20,9 +20,13 @@
     max-width: 550px;
     height: 100%;
     z-index: -1;
+    opacity: .1;
 
     @media screen and (max-width: $screen-md) {
       max-width: 100%;
+      height: 355px;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -54,18 +58,18 @@
     .footer-links-con {
       display: flex;
       align-items: start;
-      gap: 30px;
+      gap: 40px;
     }
 
     .footer-links {
       .link {
         display: block;
-        margin-bottom: 10px;
+        margin-bottom: 12px;
         width: fit-content;
         color: $white;
         font-weight: light;
         transition: $main-transition;
-        font-size: 14px;
+        font-size: 15px;
         cursor: pointer;
 
         &:hover {
@@ -107,7 +111,7 @@
       }
 
       .logo {
-        max-width: 160px;
+        max-width: 130px;
         margin-bottom: 25px;
 
         @media screen and (max-width: $screen-sm) {
@@ -123,52 +127,42 @@
         text-align: start;
       }
 
-      .social-con {
+      .social-links{
         @include center;
-        gap: 10px;
-        margin: 12px 0;
+        gap: 7px;
+        flex-wrap: wrap;
+        margin-top: 15px;
 
-        @media screen and (max-width: $screen-sm) {
+        @media screen and (max-width:$screen-xs) {
           justify-content: start;
         }
 
-        .name {
-          color: $white;
-          font-size: 18px;
-          font-weight: bold;
-          text-transform: capitalize;
-          transition: $main-transition;
+        .link{
+            @include circle(38px);
+            @include center;
+            font-size: 14px;
+            color: $main;
+            background-color: $white;
 
-          @media screen and (max-width:$screen-xs) {
-            font-size: 16px;
-          }
+            &:hover{
+                background-color: $main;
+                color: $white;
+                transform: rotate(360deg);
+            }
         }
-
-        .social {
-          display: flex;
-          align-items: center;
-          gap: 6px;
-        }
-
-        .ic {
-          font-size: 14px;
-          color: $white;
-          max-width: 16px;
-          max-height: 14px;
-          transition: $main-transition;
-        }
-      }
+    }
 
       .whatsapp-ic {
         @include center;
         gap: 12px;
+        margin-top: 20px;
 
         @media screen and (max-width: $screen-sm) {
           justify-content: start;
         }
 
         .num {
-          font-size: 22px;
+          font-size: 20px;
           color: $white;
           font-weight: bold;
 
@@ -179,6 +173,8 @@
 
         .ic {
           max-width: 22px;
+          font-size: 20px;
+          color: $white;
 
           @media screen and (max-width: $screen-xs) {
             max-width: 18px;
@@ -206,7 +202,8 @@
     padding: 12px;
   }
 
-  .name {
-    font-weight: bolder;
+  a {
+    color: $sec;
+    text-decoration: underline;
   }
 }
