--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -498,11 +498,11 @@
   align-items: start;
   justify-items: center;
 
-  @media screen and (max-width:$screen-lg) {
+  @media screen and (max-width: $screen-lg) {
     grid-template-columns: repeat(3, 1fr);
   }
-  
-  @media screen and (max-width:$screen-xs) {
+
+  @media screen and (max-width: $screen-xs) {
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -512,11 +512,11 @@
     height: 200px;
     width: 100%;
 
-    @media screen and (max-width:$screen-xs) {
+    @media screen and (max-width: $screen-xs) {
       height: 180px !important;
     }
 
-    .gallary-img{
+    .gallary-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -527,21 +527,21 @@
       grid-column: span 5;
       height: 400px;
       width: 100%;
-      
-      @media screen and (max-width:$screen-lg) {
+
+      @media screen and (max-width: $screen-lg) {
         grid-column: span 1;
         height: 200px;
       }
     }
 
     &:nth-child(4) {
-      @media screen and (max-width:$screen-lg) {
+      @media screen and (max-width: $screen-lg) {
         height: 400px;
         grid-column: span 3;
         width: 100%;
       }
 
-      @media screen and (max-width:$screen-md) {
+      @media screen and (max-width: $screen-md) {
         height: 200px;
         grid-column: span 1;
       }
@@ -550,3 +550,185 @@
 }
 
 /********************* End gallary section *********************/
+
+/********************* Start about-con section *********************/
+
+.about-con {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  gap: 35px;
+
+  @media screen and (max-width: $screen-lg) {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .about-right {
+    width: 100%;
+
+    .about-title {
+      width: fit-content;
+      font-size: 22px;
+      color: $black;
+      margin-bottom: 30px;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        @include dir-left(0);
+        background-color: $sec;
+        width: 80px;
+        height: 1px;
+      }
+    }
+
+    .desc {
+      font-size: 15px;
+      color: $black;
+      line-height: 2;
+    }
+  }
+
+  .about-img {
+    position: relative;
+    flex-shrink: 0;
+    .img {
+      width: 400px;
+      height: 340px;
+      border-radius: 15px;
+      object-fit: cover;
+
+      @media screen and (max-width: $screen-sm) {
+        width: 340px;
+        height: 300px;
+      }
+
+      @media screen and (max-width: $screen-xxs) {
+        width: 260px;
+        height: 260px;
+      }
+    }
+  }
+}
+
+/********************* End about-con section *********************/
+
+/********************* Start contact-box section *********************/
+.contact-box {
+  background-color: $white;
+  border-radius: 12px;
+  box-shadow: $sec-shadow;
+  padding: 25px;
+  transition: $main-transition;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+
+  @media screen and (max-width: $screen-md) {
+    padding: 15px;
+    gap: 12px;
+  }
+
+  .ic {
+    @include circle(60px);
+    @include center;
+    background-color: $white;
+    border: 1px solid $sec;
+    font-size: 18px;
+    color: $sec;
+    transition: $main-transition;
+
+    @media screen and (max-width: $screen-md) {
+      @include circle(50px);
+      font-size: 20px;
+    }
+  }
+
+  .name {
+    font-size: 18px;
+    color: $black;
+
+    @media screen and (max-width: $screen-md) {
+      font-size: 16px;
+    }
+  }
+
+  .desc {
+    font-size: 14px;
+    color: $black;
+    @media screen and (max-width: $screen-md) {
+      font-size: 13px;
+    }
+  }
+
+  &:hover {
+    transform: translateY(-10px);
+
+    .ic {
+      background-color: $sec;
+      color: $white;
+    }
+  }
+}
+
+.contact_form {
+  background-color: #f9f9f9;
+  padding: 35px 25px;
+  transition: $main-transition;
+  // margin-bottom: -50px;
+  position: relative;
+  z-index: 65;
+
+  @media screen and (max-width: $screen-md) {
+    padding: 20px 15px;
+  }
+
+  .input-g {
+    margin-bottom: 24px;
+  }
+
+  .input-me {
+    background-color: $white !important;
+    border: none !important;
+    border-radius: 0 !important;
+  }
+
+  .main-icon {
+    color: $sec;
+  }
+
+  .main-btn {
+    background-color: $white;
+    color: $sec;
+    border-color: $sec;
+  }
+}
+
+.contact_title {
+  width: fit-content;
+  font-size: 20px;
+  color: $black;
+  margin-bottom: 40px;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    @include dir-left(0);
+    background-color: $sec;
+    width: 80px;
+    height: 1px;
+  }
+}
+
+.contact-sec{
+  iframe{
+    min-height: 360px;
+  }
+}
+/********************* End contact-box section *********************/
