--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3119,7 +3119,7 @@ html[lang=ar] .page-navbar .navbar-content .side-close {
 .page-navbar .navbar-content .links {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 23px;
   transition: all 0.8s cubic-bezier(0.68, -0.3, 0.265, 1.3);
 }
 @media screen and (max-width: 992px) {
@@ -3180,7 +3180,7 @@ html[lang=ar] .page-navbar .navbar-content .side-close {
   content: "";
   position: absolute;
   width: 0;
-  background-color: #213f7d;
+  background-color: #2e60a9;
   height: 1px;
   transition: all 0.3s ease-in-out;
 }
@@ -3194,7 +3194,7 @@ html[lang=ar] .page-navbar .navbar-content .links .link::after {
   right: 0;
 }
 .page-navbar .navbar-content .links .link.active, .page-navbar .navbar-content .links .link:hover {
-  color: #213f7d;
+  color: #2e60a9;
 }
 .page-navbar .navbar-content .links .link.active::after, .page-navbar .navbar-content .links .link.active::before, .page-navbar .navbar-content .links .link:hover::after, .page-navbar .navbar-content .links .link:hover::before {
   width: 65%;
