--- a/assets/css/sass/_navbar.scss
+++ b/assets/css/sass/_navbar.scss
@@ -60,7 +60,7 @@
     .links {
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 23px;
       transition: all 0.8s cubic-bezier(0.68, -0.3, 0.265, 1.3);
 
       @media screen and (max-width: $screen-lg) {
@@ -117,7 +117,7 @@
           content: "";
           position: absolute;
           width: 0;
-          background-color: $main;
+          background-color: $sec;
           height: 1px;
           transition: $main-transition;
         }
@@ -134,7 +134,7 @@
 
         &.active,
         &:hover {
-          color: $main;
+          color: $sec;
           &::after, &::before {
             width: 65%;
           }
