--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -461,7 +461,7 @@ html[lang=ar] .ml-25 {
   width: 100%;
   height: 100%;
   z-index: -3;
-  opacity: 0.6;
+  opacity: 0.08;
 }
 
 .dropdown-m-container {
@@ -1631,14 +1631,14 @@ html[lang=ar] .main-imgs .main-img:not(:last-child) {
 .main-input .input-me {
   width: 100%;
   min-height: 48px;
-  border-radius: 12px;
+  border-radius: 8px;
   padding: 0 12px;
   outline: none;
   border: none;
   font-size: 14px;
-  color: #101112;
+  color: #000;
   transition: all 0.3s ease-in-out;
-  border: 1px solid #213f7d;
+  border: 1px solid rgba(0, 0, 0, 0.5);
   background-color: #fff;
 }
 @media screen and (max-width: 425px) {
@@ -1655,11 +1655,12 @@ html[lang=ar] .main-imgs .main-img:not(:last-child) {
 }
 .main-input .input-me::placeholder {
   font-size: 13px;
-  color: #213f7d;
+  color: #000;
   transition: all 0.3s ease-in-out;
 }
 .main-input .input-me:focus {
-  background-color: #2e60a9;
+  border-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
 .main-input .input-me:focus::placeholder {
   opacity: 0;
@@ -1806,11 +1807,11 @@ html[lang=ar] .main-input .sec-icon {
   min-height: 48px;
   display: flex;
   align-items: center;
-  border-radius: 12px;
+  border-radius: 8px;
   outline: none;
   font-size: 13px;
-  color: #101112;
-  border: 1px solid #000;
+  color: #000;
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 @media (max-width: 425px) {
   .select ~ .select2 .select2-selection--single,
@@ -2606,7 +2607,7 @@ html[lang=ar] .modal-dialog .close-btn {
 }
 .modal-dialog .modal-content .modal-body {
   width: 100%;
-  padding: 0 80px;
+  padding: 0 40px;
 }
 .modal-dialog .modal-content .modal-body.center {
   display: flex;
@@ -3617,7 +3618,7 @@ html[lang=ar] .footer .footer-content .footer-links .link:hover {
   display: block;
   background-color: white;
   position: relative;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .services-card .img {
   position: relative;
@@ -4130,5 +4131,120 @@ html[lang=ar] .contact_title::after {
 }
 
 /********************* End contact-box section *********************/
+/********************* Start get-quote section *********************/
+.get-quote {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #2e60a9;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  font-size: 15px;
+  padding: 12px;
+  z-index: 100;
+  writing-mode: vertical-rl;
+  transition: all 0.3s ease-in-out;
+  overflow: hidden;
+  border: 1px solid #2e60a9;
+  border-start-start-radius: 35px;
+  border-end-start-radius: 35px;
+}
+html[lang=en] .get-quote {
+  right: 0;
+}
+html[lang=ar] .get-quote {
+  left: 0;
+}
+html[lang=en] .get-quote {
+  padding-left: 25px;
+}
+html[lang=ar] .get-quote {
+  padding-right: 25px;
+}
+
+/********************* End get-quote section *********************/
+/********************* Start services-detailes section *********************/
+.services-detailes-con {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  gap: 45px;
+}
+@media screen and (max-width: 992px) {
+  .services-detailes-con {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.services-detailes-con .detailes-right {
+  width: 100%;
+}
+.services-detailes-con .detailes-right .small-title {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 18px;
+  background-color: #2e60a9;
+  border-radius: 25px;
+  width: fit-content;
+  color: #fff;
+  font-size: 15px;
+}
+html[lang=en] .services-detailes-con .detailes-right .small-title {
+  padding: 10px 25px 10px 15px;
+}
+html[lang=ar] .services-detailes-con .detailes-right .small-title {
+  padding: 10px 15px 10px 25px;
+}
+.services-detailes-con .detailes-right .detailes-title {
+  font-size: 24px;
+  color: #000;
+  margin-bottom: 18px;
+}
+.services-detailes-con .detailes-right .desc {
+  font-size: 16px;
+  color: #000;
+  line-height: 2;
+  font-weight: 600;
+}
+.services-detailes-con .detailes-img {
+  position: relative;
+}
+.services-detailes-con .detailes-img::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  border: 1px solid #2e60a9;
+  top: 20px;
+  z-index: 2;
+}
+html[lang=en] .services-detailes-con .detailes-img::after {
+  right: 20px;
+}
+html[lang=ar] .services-detailes-con .detailes-img::after {
+  left: 20px;
+}
+.services-detailes-con .detailes-img .img {
+  width: 400px;
+  height: 340px;
+  border-radius: 15px;
+  object-fit: cover;
+}
+@media screen and (max-width: 576px) {
+  .services-detailes-con .detailes-img .img {
+    width: 340px;
+    height: 300px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .services-detailes-con .detailes-img .img {
+    width: 260px;
+    height: 260px;
+  }
+}
+
+/********************* End services-detailes section *********************/
 
 /*# sourceMappingURL=main.css.map */
