--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,8 +224,33 @@ input:focus {
   background: #fff;
   overflow: hidden;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+.loader .loader_circle {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  border-top: 3px solid #2e60a9;
+  border-right: 3px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+@media screen and (max-width: 425px) {
+  .loader .loader_circle {
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+  }
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .loader img {
