--- a/assets/css/sass/_components.scss
+++ b/assets/css/sass/_components.scss
@@ -8,9 +8,29 @@
   // background: rgba($black, 0.9);
   background: $white;
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include center;
+
+  .loader_circle {
+    @include circle(100px);
+    display: inline-block;
+    border-top: 3px solid $sec;
+    border-right: 3px solid transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    
+    @media screen and (max-width:$screen-xs) {
+      @include circle(80px);
+    }
+  }
+  
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
 }
 
 .loader img {
